fixed wrong background url

--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ section {
   width: 180px;
   height: 250px;
   border-radius: 12px 12px 10px 10px;
-  background: url("/img/background/jungle.png");
+  background: url("./img/background/jungle.png");
   background-size: cover;
   box-shadow: 0 0 1rem black;
   /* box-shadow: 0 0 1rem var(--clr-light); */
